Also, the details area on the Experience jumbotron — if there are no participants it's too short, so hopefully this will fix that.

--- a/Badges/Content/badges.css
+++ b/Badges/Content/badges.css
@@ -519,7 +519,7 @@ input#cover-image, input#cover-image[type="file"] {
     padding: 0 15px;
     color: #fff;
     border-top: 3px solid white;
-    height: 92px;
+    min-height: 100px;
     position: relative;
     top: 26px; }
 
