--- a/Badges/Content/sass/regions/_experiences.scss
+++ b/Badges/Content/sass/regions/_experiences.scss
@@ -24,7 +24,7 @@
 		padding: 0 15px;
 		color: #fff;
 		border-top: $border-tripel #fff;
-		height: 92px;
+		min-height: 100px;
 		position: relative;
 		top: 26px;
 	}
